# GameStoreApp

./: .gitignore  docker-compose.yml  pyproject.toml
app/: handlers.py  settings.py  urls.py
app/templates/app/: base.html  navbar.html  not_found.html
shop/: admin.py  forms.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_product.py  0003_alter_product_price.py
shop/templates/: index_page.html
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py
